<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_max_results_default"
        android:inputType="numberDecimal"
        android:key="max_results"
        android:selectAllOnFocus="true"
        android:title="@string/settings_max_results_label"
        android:summary="@string/settings_max_results_summary" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"
        android:summary="@string/settings_order_by_summary" />

    <ListPreference
        android:defaultValue="@string/settings_lang_preference_default"
        android:entries="@array/settings_language_preferences_labels"
        android:entryValues="@array/settings_language_preference_values"
        android:key="@string/settings_lang_preference_key"
        android:title="@string/settings_lang_preference_label"
        android:summary="@string/settings_lang_preference_summary" />

</PreferenceScreen>